@@ -6,12 +6,9 @@ import androidx.compose.runtime.CompositionLocalProvider
 import androidx.compose.ui.Modifier
 import cafe.adriel.voyager.navigator.Navigator
 import cafe.adriel.voyager.transitions.SlideTransition
-import data.tutorial.MongoDB
 import domain.initKoin
 import org.jetbrains.compose.ui.tooling.preview.Preview
-import org.koin.dsl.module
 import presentation.screens.tutorial.home.HomeScreen
-import presentation.screens.tutorial.home.HomeViewModel
 import presentation.style.DarkThemeCompositionLocal
 import presentation.style.MainTheme
 import presentation.style.dimIfDarkMode
@@ -32,9 +29,4 @@ fun App() {
             }
         }
     }
-}
-
-val mongoModule = module {
-    single { MongoDB() }
-    factory { HomeViewModel(get()) }
 }
