@@ -1,5 +1,6 @@
 package domain
 
+import data.tutorial.MongoDB
 import domain.calendar.CalendarRepository
 import domain.screens.dayPartMenu.DayPartMenuRepository
 import domain.screens.mainMenu.MainMenuRepository
@@ -8,6 +9,7 @@ import org.koin.dsl.module
 import presentation.components.calendar.CalendarViewModel
 import presentation.screens.dayPartMenu.DayPartMenuViewModel
 import presentation.screens.mainMenu.MainMenuViewModel
+import presentation.screens.tutorial.home.HomeViewModel
 
 fun initKoin() {
     startKoin {
@@ -21,7 +23,14 @@ fun initKoin() {
 
                 single { CalendarRepository() }
                 factory { CalendarViewModel(get()) }
+
+                mongoModule //from tutorial
             },
         )
     }
+}
+
+val mongoModule = module {
+    single { MongoDB() }
+    factory { HomeViewModel(get()) }
 }
