@@ -2,7 +2,11 @@ This is just to motivate myself to improve a little bit every day :)
 
 Best: 32
 
-24-03-202
+25-03-2025
+Streak: 3
+    - Following Tutorial-ish: Put mongoDB module in DependencyInjection.kt
+
+24-03-2025
 Streak: 2
     - Pull initKoin out of androidMain and into shared App code.
     - Add task to restructure 'repository' usage.
